解决Vs2022常量编译错误
数组长度必须用常量定义

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,15 @@ a.out.wasm
 # visual studio and its cmake
 .vs/
 CMakeSettings.json
+*.tlog
+*.obj
+*.exe
+*.pdb
+*.vcxproj
+*.filters
+*.user
+*.recipe
+*.ilk
+*.log
+*.res
+*.sln
